recursion.lessons.recursion.tree.Tree.scala.error
Tree:4: error: not found: value step
		setCouleur(current(step));
                                   ^Tree:10: error: not found: value shrik
		tree(steps-1, length*shrik, angle, shrink);
                                     ^