recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
	if (steps!=0) {
		setCouleur(current(step));
		avance(length);
		droite(angle);
		tree(steps-1, length*shrink, angle, shrink);
		recule(length);
		gauche(2*angle);
		tree(steps-1, length*shrik, angle, shrink);
	}
}
